Fix internal iOS builds following 290280@main https://bugs.webkit.org/show_bug.cgi?id=287807 rdar://144991668

Reviewed by Abrar Rahman Protyasha.

SwiftUI.framework is unavailable in some images where WebKit.framework is
available. Weak link SwiftUI to avoid build failures in those places.

* Source/WebKit/Platform/cocoa/WKMaterialHostingSupport.h:

Introduce an availability check to avoid crashing in places where SwiftUI
is unavailable.

* Source/WebKit/Platform/cocoa/WKMaterialHostingSupport.swift:
(WKMaterialHostingSupport.isMaterialHostingAvailable):
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeHost.mm:
(WebKit::RemoteLayerTreeHost::makeNode):
* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteLayerTreeHostIOS.mm:
(WebKit::RemoteLayerTreeHost::makeNode):

Canonical link: https://commits.webkit.org/290493@main